[WIP] Implement search configuration REST API
Added a REST API to support CRUD operations on search configurations.

This is a work in progress as there are a number of things to fix:

1. We prefer not to store things like this in indexes. I copied the
   model from a couple of plugins written during the OpenDistro era,
   when we didn't have access to cluster manager state. The cluster
   state is the right place for search configuration, though.
2. By storing things as search configurations, we no longer need the
   silly "order" property on transformers, since we can store an array
   of transformers, where order is provided by the array.